--- a/doc/architecture/adr/0018-.net-upgrade-strategy.md
+++ b/doc/architecture/adr/0018-.net-upgrade-strategy.md
@@ -8,7 +8,7 @@
 
 ## Context and Problem Statement
 
-.NET is released yearly in November alternating between releases under Standard Term Support (STS) and Long Term Support (LTS). At the time of writing there is at least two .NET releases with support at any time and there is a period of time to switch releases. See https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-core for more details.
+.NET is released yearly in November alternating between releases under Standard Term Support (STS) and Long Term Support (LTS). At the time of writing there is at least two .NET releases with support at any given time with time to switch releases. See https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-core for more details.
 
 ---
 
