--- a/doc/architecture/adr/0018-.net-upgrade-strategy.md
+++ b/doc/architecture/adr/0018-.net-upgrade-strategy.md
@@ -26,7 +26,7 @@ We chose the option where teams may decide on their own accord to upgrade to the
 
 ## Rationale
 
-The domains are different and the services within a domain have expected lifetime and degree of planned features. We want to be in a situation where the decision about upgrading solely depends on that single domain and not other domains.
+The domains are different and the services within a domain have an expected lifetime and a degree of planned features. We want to be in a situation where the decision about upgrading solely depends on that single domain and not other domains.
 
 This strategy sets the requirement that all .NET projects is based on a supported .NET release. It is up to the responsible team to ensure that .NET projects are running on at least a supported version.
 
